# example-marvel-haskell

./: .dockerignore  .ghci  .gitignore  Config.hs  Dockerfile  LICENSE  Main.hs  Procfile  README.md  Routes.hs  app.cabal  app.json  stack-bootstrap
Controllers/: Character.hs  Characters.hs  Comic.hs  Comics.hs  Home.hs
Helpers/: PageTitle.hs  PathInfo.hs  SPF.hs
Models/: Character.hs  CharacterList.hs  CharacterSummary.hs  Comic.hs  ComicList.hs  ComicSummary.hs  FeaturedCharacter.hs  FeaturedComic.hs  Ids.hs  Image.hs  Pagination.hs  Url.hs
Services/: Marvel.hs
Views/: Layout.hs
Views/Components/: CharacterDetails.hs  CharactersList.hs  ComicDetails.hs  ComicsList.hs  FeaturedCharacters.hs  FeaturedComics.hs  MainFooter.hs  MainNavigation.hs  ResultsPagination.hs
Views/Pages/: Character.hs  Characters.hs  Comic.hs  Comics.hs  Error.hs  Home.hs  NotFound.hs
static/js/: app.js
