name:          app
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          app
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:
        Config
      , Controllers.Characters
      , Controllers.Home
      , Helpers.PageTitle
      , Models.Character
      , Services.Marvel
      , Views.Components.CharactersList
      , Views.Components.MainFooter
      , Views.Components.MainNavigation
      , Views.Layout
      , Views.Pages.Characters
      , Views.Pages.Home
    build-depends:
        base >= 4 && < 5
      , scotty >= 0.10.0 && < 0.11
      , wreq
      , basic-prelude
      , time
      , pureMD5
      , text
      , lens
      , aeson
      , lens-aeson
      , mtl
      , wai-extra
      , wai-middleware-static
      , blaze-html
      , blaze-markup
