name:          app
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          app
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:
        Config
      , Controllers.Character
      , Controllers.Comic
      , Controllers.Home
      , Helpers.PageTitle
      , Helpers.PathInfo
      , Models.Character
      , Models.CharacterList
      , Models.CharacterSummary
      , Models.Comic
      , Models.ComicList
      , Models.ComicSummary
      , Models.FeaturedCharacter
      , Models.FeaturedComic
      , Models.Image
      , Models.Pagination
      , Models.Url
      , Services.Marvel
      , Views.Components.CharacterDetails
      , Views.Components.CharactersList
      , Views.Components.ComicDetails
      , Views.Components.ComicsList
      , Views.Components.FeaturedCharacters
      , Views.Components.FeaturedComics
      , Views.Components.MainFooter
      , Views.Components.MainNavigation
      , Views.Components.ResultsPagination
      , Views.Layout
      , Views.Pages.Character
      , Views.Pages.Characters
      , Views.Pages.Comic
      , Views.Pages.Comics
      , Views.Pages.Error
      , Views.Pages.Home
    build-depends:
        base >= 4 && < 5
      , scotty >= 0.10.0 && < 0.11
      , wreq
      , basic-prelude
      , time
      , pureMD5
      , text
      , lens
      , aeson
      , lens-aeson
      , mtl
      , wai
      , wai-extra
      , wai-middleware-static
      , blaze-html
      , blaze-markup
      , regex-pcre
      , bytestring
      , http-client
      , transformers-base
      , monad-control
      , http-types
