name:          app
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          app
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:
        Config
      , Controllers.Character
      , Controllers.Comic
      , Controllers.Home
      , Helpers.PageTitle
      , Helpers.PathInfo
      , Models.Character
      , Models.CharacterList
      , Models.CharacterSummary
      , Models.Comic
      , Models.ComicList
      , Models.ComicSummary
      , Models.FeaturedCharacter
      , Models.FeaturedComic
      , Models.Ids
      , Models.Image
      , Models.Pagination
      , Models.Url
      , Services.Marvel
      , Views.Components.CharacterDetails
      , Views.Components.CharactersList
      , Views.Components.ComicDetails
      , Views.Components.ComicsList
      , Views.Components.FeaturedCharacters
      , Views.Components.FeaturedComics
      , Views.Components.MainFooter
      , Views.Components.MainNavigation
      , Views.Components.ResultsPagination
      , Views.Layout
      , Views.Pages.Character
      , Views.Pages.Characters
      , Views.Pages.Comic
      , Views.Pages.Comics
      , Views.Pages.Error
      , Views.Pages.Home
    build-depends:
        aeson >= 0.9 && < 1.0
      , base >= 4 && < 5
      , basic-prelude >= 0.5 && < 0.6
      , blaze-html >= 0.8 && < 0.9
      , blaze-markup >= 0.7 && < 0.8
      , bytestring >= 0.10 && < 0.11
      , http-client >= 0.4 && < 0.5
      , http-types >= 0.9 && < 1.0
      , lens >= 4.13 && < 4.14
      , lens-aeson >= 1.0 && < 1.1
      , monad-control >= 1.0 && < 1.1
      , mtl >= 2.2 && < 2.3
      , pureMD5 >= 2.1 && < 2.2
      , regex-pcre >= 0.94 && < 0.95
      , scotty >= 0.10 && < 0.11
      , text >= 1.2 && < 1.3
      , time >= 1.5 && < 1.6
      , transformers-base >= 0.4 && < 0.5
      , wai >= 3.2 && < 3.3
      , wai-extra >= 3.0 && < 3.1
      , wai-middleware-static >= 0.8 && < 0.9
      , wreq >= 0.4 && < 0.5
